# hackerrank-sols

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
buildinfra/: compile.py  tester.py
coinchangeproblem/: build.py  main.cpp
coinchangeproblem/input/: test0.in
common/: debug.h
minimaxsum/: build.py  minimaxsum_main.cpp
